Stop the title from wrapping.

--- a/www/style.css
+++ b/www/style.css
@@ -57,6 +57,7 @@ body {
 }
 
 .posttitle {
+    white-space: nowrap;
 }
 
 .posttable {
@@ -71,6 +72,7 @@ body {
 }
 
 .metadatacell {
+    white-space: nowrap;
 }
 
 .metadatatable {
